# shrec2025_protein

./: .gitignore  LICENSE.txt  README.md
ml/: cross_val.py  main.py  pyproject.toml  requirements.txt
src/: CMakeLists.txt  sobol.cpp  sobol.hpp  utils.hpp  vtk2feat.cpp
